<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_bg"
        android:padding="10dp" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/found_setting" />

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/text_color"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        style="@style/EditDataText"
        android:text="@string/device" />

    <View style="@style/HorLine" />

    <TextView
        style="@style/EditDataText"
        android:text="@string/manufacturer" />

    <View style="@style/HorLine" />

    <TextView
        style="@style/EditDataText"
        android:text="@string/serial_number" />

    <View style="@style/HorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_setting_state"
            style="@style/EditDataText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ble_off" />

        <ToggleButton
            android:id="@+id/mTogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:button="@drawable/btn_switch"
            android:checked="false"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/space"
            android:textOff="@string/space"
            android:textOn="@string/space" />
    </LinearLayout>

    <View style="@style/HorLine" />

</LinearLayout>
