<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_bg"
        android:padding="10dp" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/bluetooth_default" />

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/heart_title"
            android:textColor="@color/text_color"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_heart_rate"
        style="@style/EditDataText"
        android:text="@string/heart" />

    <View style="@style/HorLine" />

    <EditText
        android:id="@+id/et_heart_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:hint="@string/change_heart" >
    </EditText>

    <Button
        android:id="@+id/btn_modify"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_ok_selector"
        android:text="@string/change"
        android:textSize="15sp" />

</LinearLayout>