<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_bg"
        android:padding="10dp" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/bluetooth_default" />

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home"
            android:textColor="@color/text_color"
            android:textSize="22sp" />
    </RelativeLayout>

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_on_off"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_cancel_shape"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/ble_off"
        android:textColor="@color/text_dark_gray"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/item_bg"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RelativeLayout
            android:id="@+id/rl_cpu_temp"
            style="@style/RelativeHomeContent" >

            <ImageView
                android:id="@+id/iv_temp"
                style="@style/ImageViewHome"
                android:src="@drawable/watermark_share_icon_flash_lamp_off" />

            <TextView
                android:id="@+id/tv_home_temperature"
                style="@style/TextTitelHome"
                android:layout_toRightOf="@id/iv_temp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/tv_home_temperature_value"
                style="@style/TextContentHome"
                android:layout_toRightOf="@id/iv_temp"
                android:text="@string/default_string" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_cpu_message"
            style="@style/RelativeHomeContent" >

            <ImageView
                android:id="@+id/iv_home_message"
                style="@style/ImageViewHome"
                android:src="@drawable/btn_statistic_edit_pressed" />

            <TextView
                android:id="@+id/tv_home_message"
                style="@style/TextTitelHome"
                android:layout_toRightOf="@id/iv_home_message"
                android:text="@string/Message" />

            <TextView
                style="@style/TextContentHome"
                android:layout_toRightOf="@id/iv_home_message"
                android:text="@string/check_message" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/item_bg"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RelativeLayout
            android:id="@+id/rl_cpu_heart"
            style="@style/RelativeHomeContent" >

            <ImageView
                android:id="@+id/iv_home_heart_rate"
                style="@style/ImageViewHome"
                android:src="@drawable/ic_care_by_other" />

            <TextView
                style="@style/TextTitelHome"
                android:layout_toRightOf="@id/iv_home_heart_rate"
                android:text="@string/heart" />

            <TextView
                android:id="@+id/tv_home_heart_rate"
                style="@style/TextContentHome"
                android:layout_toRightOf="@id/iv_home_heart_rate"
                android:text="@string/default_string" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#44000000" />

        <RelativeLayout
            android:id="@+id/rl_cpu_guide"
            style="@style/RelativeHomeContent" >

            <ImageView
                android:id="@+id/iv_setting"
                style="@style/ImageViewHome"
                android:src="@drawable/guide" />

            <TextView
                style="@style/TextTitelHome"
                android:layout_toRightOf="@id/iv_setting"
                android:text="@string/setting" />

            <TextView
                style="@style/TextContentHome"
                android:layout_toRightOf="@id/iv_setting"
                android:text="@string/config" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88000000" />

</LinearLayout>